v0.5 --

	* Apply comments from Randy Dunlap, that is:
	  - Remove braces around one statement blocks.
	  - Remove parentheses from return statements.
	  - Add space before "?" and ":".
	  - Rework function inlining.
	  - Typos.

v0.4 -- Sat, 12 Nov 2005 16:38:36 +0100

	* Add ECP mode (write_data).
	* Add EPP mode.
	* Cleanup in parport_ip32_compat_write_data().

v0.3 -- Fri, 11 Nov 2005 20:14:05 +0100

	* Add DMA support.
	* Remove useless parport_ip32_fifo_write_pio_wait().
	* Finally remove macro PRIV().
	* Remove redefinition of macro BIT() as it may introduce bugs.

v0.2.2 -- Sat, 05 Nov 2005 16:22:21 +0100

	* "Make things simple" version.
	* Change module parameters (again).    
	* Simplify probing logic.
	* Use only one member fifo instead of cFifo, ecpDFifo, and
	  tFifo in parport_ip32_regs.

v0.2.1 -- Tue, 01 Nov 2005 23:50:51 +0100

	* Fix sparse warnings.
	* Whitespace cleanup.
	* Make irq and dma module parameters as Boolean.
	* Remove useless paranoid checks about FIFO Full and Empty
	  bits set together.
	* Remove useless defines.
	* Remove compilation options.
	* Apply comments from Ralf Baechle <ralf@lmo>, that is:
	  - Remove CONFIG_PARPORT_IP32_FIFO.
	  - Remove declaration of mace for modules.
	  - Remove DRV_* macros.
	  - Remove byte and bool typedef's.
	  - Remove wrapper functions around parport operations.
	  - Remove useless cast in PRIV().

v0.2 -- Mon, 24 Oct 2005 23:19:57 +0200

	* The FIFO Full bit doesn't look to be very reliable in
	  forward transfer mode, don't count on it.
	* Fix bug in parport_ip32_fifo_write_block_pio.
	* Fix typos.

v0.1 -- Sat, 22 Oct 2005 22:14:02 +0200

	* First public release.


# Local Variables:
# mode: text
# indent-tabs-mode: t
# tab-width: 8
# ispell-local-dictionary: "american"
# End: