@@ -1,10 +1,15 @@
 v0.5 --
 
+	* TODO :
+	  - Rework memory barriers.
+
 	* Apply comments from Randy Dunlap, that is:
+	  - Remove parport_ip32_{in,out}: use {read,write}b directly.
+	  - Rework function inlining.
 	  - Remove braces around one statement blocks.
 	  - Remove parentheses from return statements.
 	  - Add space before "?" and ":".
-	  - Rework function inlining.
+	  - Check kernel docs.
 	  - Typos.
 
 v0.4 -- Sat, 12 Nov 2005 16:38:36 +0100
